--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
