--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "2.1.8",
+    "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0"
   },
   "scripts": {
